--- a/album/composer.json
+++ b/album/composer.json
@@ -29,6 +29,7 @@
     "autoload-dev": {
         "psr-4": {
             "ApplicationTest\\": "module/Application/test/",
+         	 "AlbumTest\\": "module/Album/test/",
          	"Album\\": "module/Album/src/"
         }
     },
@@ -44,5 +45,8 @@
         ],
         "serve": "php -S 0.0.0.0:8080 -t public/ public/index.php",
         "test": "phpunit"
+    },
+    "require-dev": {
+        "zendframework/zend-test": "^3.0"
     }
 }
